# swgoh

./: .env.example  README.md  pyproject.toml  requirements.txt
scripts/: sync_data.py  sync_guilds_players.py
src/swgoh/: comlink.py  config.py  creds.py  http.py  sheets.py
src/swgoh/bot/: config.py  main_bot.py
src/swgoh/bot/commands/: misoperaciones.py  operacionesjugador.py  register.py  sync_guild.py  syncdata.py  syncguild.py
src/swgoh/bot/jobs/: send_assignments_daily.py
src/swgoh/bot/keyboards/: guild_select.py  player_select.py
src/swgoh/bot/services/: auth.py  sheets.py  sync_runner.py
src/swgoh/processing/: sync_data.py  sync_guilds.py
